<?xml version="1.0"?>
<package format="3">
  <name>vn_driver</name>
  <version>0.0.1</version>
  <description>VectorNav IMU driver</description>
  <maintainer email="dubey.sart@northeastern.edu">Sarthak Dubey</maintainer>
  <license>Apache-2.0</license>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>custom_msgs</depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
